# rpg2022

./: CNAME  Cargo.toml  README.md  index-c951a8216bd665d9.js  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build_native.yml  build_web.yml  clippy_check.yml  publish_web.yml
css/: index.scss
src/: bevy_web_fullscreen.rs  door.rs  game_camera.rs  lib.rs  main.rs  map.rs  music.rs  player.rs  window.rs  z.rs
src/map/: objects.rs  tiles.rs
src/player/: animate.rs  control.rs  frame.rs  input.rs  keyboard.rs  mouse.rs  velocity.rs
src/window/: web_fullscreen.rs
