[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[dependencies]

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["png", "bevy_wgpu", "bevy_winit", "render", "x11"] }

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["png", "bevy_winit", "render"] }
bevy_webgl2 = "0.5"
wasm-bindgen = "0.2"
